--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "barryvdh/laravel-snappy": "^0.4.4",
         "cmgmyr/messenger": "^2.17",
+        "devdojo/chatter": "0.2.*",
         "devmarketer/easynav": "^1.0",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
