--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "php": "^7.1.3",
         "barryvdh/laravel-snappy": "^0.4.4",
         "cmgmyr/messenger": "^2.17",
+        "consoletvs/charts": "5.*",
         "devmarketer/easynav": "^1.0",
         "fideloper/proxy": "^4.0",
+        "graham-campbell/markdown": "^10.3",
         "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
         "laravel/telescope": "^2.0",
