--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "consoletvs/charts": "5.*",
         "devmarketer/easynav": "^1.0",
         "fideloper/proxy": "^4.0",
+        "google/cloud-language": "^0.20.0",
         "graham-campbell/markdown": "^10.3",
         "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
