Added some animations and modified the discussion page

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "buefy": "^0.7.5",
         "font-awesome": "^4.7.0",
+        "interactjs": "^1.4.0-rc.13",
         "slug": "^1.1.0"
     }
 }
